create a test area for our fragment

--- a/SampleApp/src/main/res/layout/sample_activity.xml
+++ b/SampleApp/src/main/res/layout/sample_activity.xml
@@ -166,6 +166,15 @@
                 android:onClick="onAutotest"
                 android:text="Auto-test loop"/>
 
+            <Button
+                android:id="@+id/fragment_test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:text="Fragment Test"
+                android:onClick="OnFragmentTest"
+                ></Button>
+
         </LinearLayout>
 
         <Spinner
