--- a/SampleApp/src/main/res/layout/activity_embed.xml
+++ b/SampleApp/src/main/res/layout/activity_embed.xml
@@ -9,11 +9,13 @@
     tools:context="io.card.development.Embed">
 
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.6">
 
         <TextView
+            android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Area holder for the camera" />
@@ -27,7 +29,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Other texts go here" />
+            android:text="Other texts go here"
+            android:textColor="@android:color/black" />
     </FrameLayout>
 
 </LinearLayout>
